--- a/src/section.css
+++ b/src/section.css
@@ -24,6 +24,10 @@
 .section-text-container h1{
     font-size: 4em;
     margin: 0;
+    line-height: 115%;
+    margin-bottom: 1.5rem;
+    text-align: left;
+    max-width: 16ch;
 }
 
 .section-text-container p{
@@ -35,8 +39,6 @@
 }
 
 .section-image-container{
-    height: 37vw;
-    width: 50vw;
     position: relative;
     display: flex;
     align-items: center;
@@ -45,4 +47,69 @@
 .section-image-container .mainimg{
     width: 100%;
     height: 100%;
+}
+
+
+@media only screen and (max-width: 925px){
+    .section-content{
+        flex-direction: column;
+        padding: 0;
+    }
+    .section-image-container{
+        height: 40vw;
+        width: 60vw;
+        padding: 0;
+        margin: 0;
+    }
+    .section-text-container{
+        margin: 2rem 0;
+        padding: 0 1rem;
+        align-items: center;
+    }
+    .section-text-container h1{
+        line-height: 110%;
+        margin-bottom: 1.5rem;
+        text-align: center;
+        
+    }
+    
+    .section-text-container p{
+        text-align: center;
+    }
+
+    .section5-icons svg{
+        height: 4rem;
+        width: 4rem;
+        margin-bottom: 0;
+    }
+}
+
+@media only screen and (max-width: 770px){
+    .section-image-container{
+        height: 50vw;
+        width: 70vw;
+
+    }
+}
+
+@media only screen and (max-width: 620px){
+    .section-image-container{
+        height: 70vw;
+        width: 80vw;
+
+    }
+}
+
+@media only screen and (max-width: 450px){
+    .section-text-container h1{
+        font-size: 2.5em;
+    }
+    .section-text-container p{
+        font-size: 0.9em;
+    }
+    .section-image-container{
+        height: 80vw;
+        width: 90vw;
+
+    }
 }
