--- a/src/Sections/section4.css
+++ b/src/Sections/section4.css
@@ -16,7 +16,8 @@
     height: 90%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     transform: scaleX(1);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.7s ease-in-out;
+    transition-delay: 0.3s;
 }
 
 #section4-imgfront{
@@ -27,7 +28,7 @@
     left: 5%;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     transform: scaleY(1);
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.7s ease-in-out;
 }
 
 .section4-image-container .sec4-circleimg{
