--- a/src/Sections/section.css
+++ b/src/Sections/section.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 @keyframes fadeUp{
     0%{
         opacity: 0;
