--- a/src/Sections/section.css
+++ b/src/Sections/section.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @keyframes fadeUp{
     0%{
         opacity: 0;
@@ -44,7 +44,7 @@
 }
 
 .section-content{
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,7 +72,7 @@
     line-height: 115%;
     margin-bottom: 1.5rem;
     text-align: left;
-    max-width: 18ch;
+    max-width: 12ch;
     color: var(--primary-color);
 }
 
