--- a/src/Sections/section5.css
+++ b/src/Sections/section5.css
@@ -28,7 +28,9 @@
     animation-fill-mode: forwards;
     
 }
-
+.section5-content{
+    overflow: hidden;
+}
 .section5-text-container{
     margin-bottom: 8rem;
 }
@@ -70,6 +72,8 @@
     animation: var(--image-animation) 1s 1;
     animation-fill-mode: forwards;
     opacity: 0;
+    overflow: hidden;
+    max-width: 100vw;
 }
 
 
